@@ -15,6 +15,7 @@ no_AutoPrereq      = 1
 
 [Prereqs / Runtime]
 perl                        = 5.008
+Class::Load                 = 0.06
 JSON::XS                    = 0
 Module::Pluggable           = 0
 POE                         = 1.292
