@@ -7,6 +7,7 @@ use warnings FATAL => 'all';
 sub POE::Kernel::USE_SIGCHLD () { return 1 }
 
 use App::Pocoirc::Status;
+use Class::Load qw(try_load_class);
 use Cwd qw(abs_path);
 use Fcntl qw(O_CREAT O_EXCL O_WRONLY);
 use File::Glob ':glob';
@@ -120,7 +121,7 @@ sub _setup {
     }
 
     for my $plug_spec (@{ $self->{cfg}{global_plugins} || [] }) {
-        $self->_require_plugin($plug_spec);
+        $self->_load_plugin($plug_spec);
     }
 
     while (my ($network, $opts) = each %{ $self->{cfg}{networks} }) {
@@ -130,7 +131,7 @@ sub _setup {
         }
 
         for my $plug_spec (@{ $opts->{local_plugins} || [] }) {
-            $self->_require_plugin($plug_spec);
+            $self->_load_plugin($plug_spec);
         }
 
         if (!defined $opts->{server}) {
@@ -138,9 +139,9 @@ sub _setup {
         }
 
         $opts->{class} = 'POE::Component::IRC::State' if !defined $opts->{class};
-        eval "require $opts->{class}";
-        chomp $@;
-        die "Can't load class $opts->{class}: $@\n" if $@;
+        my ($success, $error) = try_load_class($opts->{class});
+        chomp $error if defined $error;
+        die "Can't load class $opts->{class}: $error\n" if !$success;
     }
 
     return;
@@ -351,8 +352,8 @@ sub _irc_to_network {
     return;
 }
 
-# find out the canonical class name for the plugin and require() it
-sub _require_plugin {
+# find out the canonical class name for the plugin and load it
+sub _load_plugin {
     my ($self, $plug_spec) = @_;
 
     return if defined $plug_spec->[2];
@@ -361,15 +362,15 @@ sub _require_plugin {
 
     my $fullclass = "POE::Component::IRC::Plugin::$class";
     my $canonclass = $fullclass;
-    my $error;
-    eval "require $fullclass";
-    if ($@) {
-        $error .= $@;
-        eval "require $class";
-        if ($@) {
-            chomp $@;
-            $error .= $@;
-            die "Failed to load plugin $class or $fullclass: $error\n";
+    my ($success, $error, $errors);
+    ($success, $error) = try_load_class($fullclass);
+    if (!$success) {
+        $errors .= $error;
+        ($success, $error) = try_load_class($class);
+        if (!$success) {
+            chomp $error if defined $error;
+            $errors .= $error;
+            die "Failed to load plugin $class or $fullclass: $errors\n";
         }
         $canonclass = $class;
     }
